syntax = "proto3";
import "CommGetPvpVictoryAwardRequest.proto";
import "HeroBasicInfo.proto";
import "PlayerItem.proto";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "CommGetPvpVictoryAwardResponseProtobuf";

message	CommGetPvpVictoryAwardResponse  {
		uint32	result = 10;
		CommGetPvpVictoryAwardRequest	request = 11;
	repeated	HeroBasicInfo	hero = 12;
	repeated	PlayerItem	items = 13;
	repeated	PlayerItem	archives = 14;
}